Align with semantics Avoid misrepresenting what is only stylistic as a functional tag

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -654,8 +654,17 @@ pre, code {
   font-weight: 500;
 }
 
-abbr {
-  font-variant-caps: all-small-caps;
+p, li, figcaption, th, td {
+  .small-caps {
+    font-variant-caps: all-small-caps;
+    letter-spacing: 0.025em;
+  }
+}
+
+pre, code {
+  .small-caps {
+    font-variant-caps: normal;
+  }
 }
 
 @media (max-width: 640px) {
